Installation of git and clone

--- a/Linux/Installation_Arch/TODO
+++ b/Linux/Installation_Arch/TODO
@@ -4,5 +4,5 @@ SecureBoot Enable when using GRUB
 BTFS
 Virtualisation with GPU + Sounds Passthrough
 System Backups (Important Files)
-
+CUPS (Printer)
 
